--- a/1-1.md
+++ b/1-1.md
@@ -64,7 +64,17 @@ It also might help to consider that, from one perspective, it's always a win to 
 
 Footnotes
 
+0.775 - Ayn Rand wrote her 1200-page magnum opus "Atlas Shrugged" essentially on this idea that A = A, and exploring the implications of accepting and affirming that, and rejecting that - i.e. unconsciously believing that A = B. It's funny how such a small change like that can lead to such drastically different actions and outcomes - very much like when Rick collapses the galactic empire by hacking their database and changing "1 = 1" to "1 = 0" in Rick and Morty, season 3, LOL
 
+0.8 - For me, the intuitive sense here literally feels like a "going the wrong way", "wasting effort" kinda vibe. And I feel a kind of subtle "knowing" that I'd benefit from pausing (despite the inertia), taking a step back (or 10), and remaining open long enough to find a better path.
+
+0.85 - The state / process I've just described almost exactly maps onto what peak performance psychologists call "Flow" - the state in which we feel and perform at our best. Probably a fair bit more to come on this... When a 10-year McKinsey study states that top business executives reported being five times more productive in [flow](https://www.entrepreneur.com/article/243047){:target="_blank"} ... With the way I've described it above, it's a little easier to see how this isn't an exaggeration - it's the way to solve the most important problems the fastest. Focusing on the right problems, with faster feedback, and more quality action... and it all multiplies and compounds from there.
+
+0.9 - Regrets of the dying, #1... + (best time to start is now, not too late, longevity escape velocity, and finish well - we remember it how we finish, the ending gives it the meaning) deathbed (and then it may be a bit late, although you can still make some changes / accept some things and finish well).
+
+1 - "Feel The Fear and Do It Anyway" by Susan Jeffers explores this breakdown a bit more deeply.
+
+1.1 - More on these to come. For now, you might enjoy "Why We Sleep" by Matthew Walker, "The Immunity Code" by Joel Greene, and the Waking Up app from Sam Harris.
 
 
 
