--- a/1.md
+++ b/1.md
@@ -1,1 +1,43 @@
-## What do we want (to do), why, and what gets in the way?
+## What do we want, why, and what gets in the way?
+
+.Intro
+
+### Idea 1
+
+.
+
+### Idea 2
+
+.
+
+### Idea 3
+
+.
+
+### Idea 4
+
+.
+
+### Idea 5
+
+.
+
+### Idea 6
+
+.
+
+.Wrap up
+
+.
+
+[**Next: 2. Conscious confusion / Playing with Paradoxes - Pain, Pleasure, and Perfection**](https://skillofliving.com/2)
+
+****
+
+## Ideas to slot in / Related ideas I'm considering
+
+.
+
+
+
+
