--- a/6.md
+++ b/6.md
@@ -30,7 +30,7 @@
 
 .
 
-[**Next: 7. Living IT - On leaving theory for practice - destination unknown.**](https://skillofliving.com/7)
+[**Next: 7. Living IT - Principle to practice.**](https://skillofliving.com/7)
 
 
 ****
