--- a/2.md
+++ b/2.md
@@ -1,4 +1,4 @@
-## Conscious confusion / Playing with Paradoxes - Pain, Pleasure, and Perfection
+## Conscious Clarity - Playing with paradoxes, persistent pain, and perfection
 
 .Intro
 
@@ -30,7 +30,7 @@
 
 .
 
-[**Next: 3. Unconscious confusion / Why we do what we do - Being human, a new perspective.**](https://skillofliving.com/3)
+[**Next: 3. Unconscious Clarity - Why we do what we do, being human, and a new perspective.**](https://skillofliving.com/3)
 
 ****
 
