--- a/3.md
+++ b/3.md
@@ -1,4 +1,4 @@
-## Unconscious confusion / Why we do what we do - Being human, a new perspective
+## Unconscious Clarity - Why we do what we do, being human, and a new perspective.
 
 .Intro
 
