--- a/4.md
+++ b/4.md
@@ -1,9 +1,5 @@
 ## Full Freedom - On wholesome independence, learning anything, and adaptability.
 
-or
-
-## Full Freedom - How to learn anything, be adaptable, and develop wholesome independence.
-
 .Intro
 
 ### Idea 1
@@ -34,7 +30,7 @@ or
 
 .
 
-[**Next: 5. Genuine Connection - On natural interdependence/collaboration, relationships, and business.**](https://skillofliving.com/5)
+[**Next: 5. Genuine Connection - On beautiful relationships, effortless collaboration, and natural business.**](https://skillofliving.com/5)
 
 
 ****
