--- a/5.md
+++ b/5.md
@@ -1,4 +1,4 @@
-## Genuine Connection - On natural interdependence/collaboration, relationships, and business.
+## Genuine Connection - On beautiful relationships, effortless collaboration, and natural business.
 
 .Intro
 
