--- a/4.md
+++ b/4.md
@@ -1,4 +1,4 @@
-## Full Freedom - On wholesome independence, learning anything, and adaptability.
+## Full Freedom - On wholesome independence, learning anything, and being adaptable.
 
 .Intro
 
