--- a/3.md
+++ b/3.md
@@ -30,7 +30,7 @@
 
 .
 
-[**Next: 4. Full Freedom - On wholesome independence, learning anything, and adaptability.**](https://skillofliving.com/4)
+[**Next: 4. Full Freedom - On wholesome independence, learning anything, and being adaptable.**](https://skillofliving.com/4)
 
 ****
 
