--- a/6.md
+++ b/6.md
@@ -39,6 +39,6 @@
 
 .
 
-
+**(North star: Unobstructed, Connected, Organized Self-Expression... & Perspective/Awareness?)** /or Open, Complete/True/Whole/Deep, Connected, Organized Self-Expression - for I We All Life)
 
 
