--- a/2.md
+++ b/2.md
@@ -1,4 +1,4 @@
-## Conscious Clarity - Playing with paradoxes, persistent pain, and perfection
+## Conscious Clarity - Playing with paradoxes, persistent pain, and perfection.
 
 .Intro
 
@@ -40,4 +40,5 @@
 
 Seasons for being vs doing - as part of rhythms.
 
+(With the paradoxes, can mention how we pointed before to the essential nature of dealing with them - both, a spectrum, transcend and include, both true, one is more...)
 
