--- a/4.md
+++ b/4.md
@@ -38,6 +38,8 @@
 ### Ideas to slot in / Related ideas I'm considering
 
 .
+Core idea of having evolutionary programming that helps us in short-term/survival situations, but as we expand our perspective (like from I to We / Opportunistic to Socialised, so too from we to all / life, etc.), our adaptability comes down to our ability to identify the best ways to rewrite our own code/programming and to quickly do it. Eg. avoidance to stillness (with some grey area too), and from I/We to All/Life... 
+Whether it's through methods we explore that are now available, or possibilities in the future like HI... 
 
 
 
